Created Basic Database Interaction Setup. No RelationShips between Collections setup though
